app/globals.css
@import "tailwindcss";

a,
button,
input,
textarea {
  cursor: none !important;
}

:root {
  --font-plaster: 'Plaster', sans-serif;
  --background: #171717;
  --foreground: #ffffff;
}

.font-plaster {
  font-family: var(--font-plaster);
}

body {
  background: var(--background);
  color: var(--foreground);
  overflow-x: hidden;
  font-family: Arial, Helvetica, sans-serif;
}

@keyframes marquee {
  0% {
    transform: translateX(0%);
  }

  100% {
    transform: translateX(-50%);
  }
}

.marquee-wrapper {
  display: flex;
  overflow: hidden;
  position: relative;
}

.marquee-content {
  display: flex;
  animation: marquee 20s linear infinite;
}

.marquee-wrapper:hover .marquee-content {
  animation-play-state: paused;
}

